--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"type": "module",
 	"dependencies": {
 		"@tailwindcss/typography": "^0.5.13",
+		"@vercel/speed-insights": "^1.0.12",
 		"daisyui": "^4.12.10"
 	}
 }
